[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decisionos"
version = "0.0.2"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["apps", "decisionos"]

[tool.pytest.ini_options]
markers = [
    "gate_t: Gate-T tests",
    "gate_aj: Gate-AJ tests",
    "gate_s: Gate-S tests",
    "gate_p: Gate-P tests",
    "gate_o: Gate-O tests",
    "gate_q: Gate-Q tests (Prod Cutover)",
    "e2e: End-to-end integration tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
